2016-10-08  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* debian/compat, debian/changelog, debian/control, debian/rules,
  debian/source/format: Updates from the official Debian package.


2016-10-07  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/input.c: Fix segfault when using -nojoystick. Fix improper use of
  SDL_PollEvent - caused keyboard input lag when moving a mouse or joystick.


2015-11-12  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* pia.c: Fix convoluted "if" condition.


2015-10-13  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sio.c: Suggested by Avery Lee: Fix SIO error codes with SIO patch enabled.
  This bug tripped up the original Sikor Soft's Ketchup disk, that relied on
  attempting to read disk sector 720, which should return error 144 instead of
  146.


2015-09-23  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cassette.[ch], pia.c, screen.c, sio.[ch]: Some tapes try to read from disk
  while the tape motor is on (case in point: Cubbyholes (APX)). This was not
  emulated correctly - when a disk read was attempted while tape motor was on,
  the value of the sio.c->TransferStatus variable would never revert to
  SIO_CasReadWrite, and the tape loading would not continue. This is now
  fixed. As a consequence, tape emulation ceased to use the variables
  SIO_last_op, SIO_last_op_time and SIO_last_drive, so the related code in
  screen.c and pia.c has been updated with that in mind.


2015-08-26  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c: Avoid segfault on switching TV system while sound is disabled.


2015-07-23  Christian Groessler  <chris@groessler.org>
* dc/Makefile.dc, dc/atari_dc.c, dc/config.h, dc/displayscreen.S:
  Rewrite of the screen update routines. DIRTYRECT isn't used
  anymore. Now always the whole screen is updated. The new routines
  use the Dreamcast processor's "store queue" which results in a
  decent speed-up. The time spent updating the screen is now constant,