@@ -204,7 +204,7 @@ static jint JNICALL NativeRunAtariProgram(JNIEnv *env, jobject this,
 		CARTRIDGE_XEGS_128_DESC,
 		CARTRIDGE_OSS_M091_16_DESC,
 		CARTRIDGE_5200_NS_16_DESC,
-		CARTRIDGE_ATRAX_128_DESC,
+		CARTRIDGE_ATRAX_DEC_128_DESC,
 		CARTRIDGE_BBSB_40_DESC,
 		CARTRIDGE_5200_8_DESC,
 		CARTRIDGE_5200_4_DESC,
@@ -254,7 +254,8 @@ static jint JNICALL NativeRunAtariProgram(JNIEnv *env, jobject this,
 		CARTRIDGE_MEGA_2048_DESC,
 		CARTRIDGE_THECART_32M_DESC,
 		CARTRIDGE_THECART_64M_DESC,
-		CARTRIDGE_XEGS_8F_64_DESC
+		CARTRIDGE_XEGS_8F_64_DESC,
+		CARTRIDGE_ATRAX_128_DESC
 	};
 
 	const jbyte *img_utf = NULL;
